--- a/zips/plugin.video.salts/changelog.txt
+++ b/zips/plugin.video.salts/changelog.txt
@@ -1,3 +1,10 @@
+[B]Version 0.0.34[/B]
+- Fix vkbox scraper
+- Add different progress options for download
+- Add option to import collection into a list
+- Change Sub Notification to dialog
+- Fix shush.se scraper
+
 [B]Version 0.0.33[/B]
 - Added vkbox scraper
 - More shush.se annoyance
