Add 0.0.36 of SALTS to Repo

--- a/plugin.video.salts/changelog.txt
+++ b/plugin.video.salts/changelog.txt
@@ -1,3 +1,7 @@
+[B]Version 0.0.36[/B]
+- Fix auto-play
+- Fix shush.se
+
 [B]Version 0.0.35[/B]
 - Improve next run TS in Manage Subs
 - Fix download folder not being changeable
