--- a/zips/plugin.video.salts/changelog.txt
+++ b/zips/plugin.video.salts/changelog.txt
@@ -1,3 +1,8 @@
+[B]Version 0.0.39[/B]
+- Added directdownload.tv scraper
+- Improve hdlord scraper
+- Add check for no hosters after filters are applied
+
 [B]Version 0.0.38[/B]
 - Add hdlord.com scraper
 - Fix view47 scraper
