--- a/plugin.video.1channel/changelog.txt
+++ b/plugin.video.1channel/changelog.txt
@@ -1,3 +1,10 @@
+[B]Version 2.6.0[/B]
+- Fix browse by genre defaulting to alphabetic
+- add dialog background to project
+- Add better algorithm to get DBID (thanks jhavens)
+- Fix script error on empty searches
+- Make empty searches cancel search
+
 [B]Version 2.5.2[/B]
 [B]Major[/B]
 Added PW playlists functionality:
