--- a/zips/plugin.video.salts/changelog.txt
+++ b/zips/plugin.video.salts/changelog.txt
@@ -1,3 +1,8 @@
+[B]Version 0.0.43[/B]
+- Remove istreamhd.org scraper (site went offline)
+- Remove oneclickmoviez scraper (site redirects to alluc now)
+- Make empty searches return to menu
+
 [B]Version 0.0.42[/B]
 - Add watchyourflix.com scraper
 - Add movietv.to scraper
