--- a/zips/plugin.video.salts/changelog.txt
+++ b/zips/plugin.video.salts/changelog.txt
@@ -1,3 +1,8 @@
+[B]Version 0.0.44[/B]
+- Re-add istreamhd.org scraper
+- make unusable filter log info rather than debug
+- make paths dynamic for download
+
 [B]Version 0.0.43[/B]
 - Remove istreamhd.org scraper (site went offline)
 - Remove oneclickmoviez scraper (site redirects to alluc now)
