--- a/zips/plugin.video.1channel/changelog.txt
+++ b/zips/plugin.video.1channel/changelog.txt
@@ -1,4 +1,8 @@
-[B]Version 2.5.53[/B]
+[B]Version 2.5.56[/B]
+- Fix login for pw site changes
+- Fix utf-8 in pages with mysql
+
+[B]Version 2.5.55[/B]
 - Fix browse by genre defaulting to alphabetic
 - add dialog background to project
 - Add better algorithm to get DBID (thanks jhavens)
