--- a/plugin.video.1channel/changelog.txt
+++ b/plugin.video.1channel/changelog.txt
@@ -1,3 +1,6 @@
+[B]Version 2.5.60[/B]
+- Fix url update to work on all versions of sqlite
+
 [B]Version 2.5.59[/B]
 - Add new filter for promo hosts
 - Fix new PW urls to match old ones
