Add 2.5.61 of 1CH and 0.0.51 of SALTS to Repo

--- a/plugin.video.1channel/changelog.txt
+++ b/plugin.video.1channel/changelog.txt
@@ -1,3 +1,8 @@
+[B]Version 2.5.62[/B]
+- Fix urls that start with //
+- Set playlists to default view
+- Fix playlist images
+
 [B]Version 2.5.61[/B]
 - Fix url update to work on all versions of sqlite
 
