--- a/zips/plugin.video.1channel/changelog.txt
+++ b/zips/plugin.video.1channel/changelog.txt
@@ -1,3 +1,6 @@
+[B]Version 2.5.63[/B]
+- Add Firestorm Theme
+
 [B]Version 2.5.62[/B]
 - Fix urls that start with //
 - Set playlists to default view
