Add 0.0.63 of SALTS to Repo

--- a/plugin.video.salts/changelog.txt
+++ b/plugin.video.salts/changelog.txt
@@ -1,4 +1,7 @@
 [B]Version 0.0.62[/B]
+- Fix script error in iwatchonline
+
+[B]Version 0.0.62[/B]
 - Fix script error on android & iphone
 
 [B]Version 0.0.61[/B]
