--- a/zips/plugin.video.salts/changelog.txt
+++ b/zips/plugin.video.salts/changelog.txt
@@ -1,3 +1,7 @@
+[B]Version 1.0.0~beta5[/B]
+- Improve movie4k scraper
+- Fix moviestorm scraper
+
 [B]Version 1.0.0~beta4[/B]
 - Fix moviestorm search
 - add gvcenter scraper
