--- a/script.module.trakt/changelog.txt
+++ b/script.module.trakt/changelog.txt
@@ -1,3 +1,11 @@
+Version 2.3.0
+
+- trakt.py 1ad4fcfdcbce30b0714880ac39372642942fe4dc
+
+Version 2.2.1-beta
+
+- trakt.py e680cf330f0ed7fc7cfea4318cefdbec551dbfc0
+
 Version 2.2.0
 
 - trakt.py d1391819e485c29283bd59fa1e50e0af44a75ffd
