--- a/zips/plugin.video.salts/changelog.txt
+++ b/zips/plugin.video.salts/changelog.txt
@@ -1,4 +1,8 @@
 [B]Version 1.0.0~beta7[/B]
+- Add hidden progress
+- Improve vkbox scraper
+
+[B]Version 1.0.0~beta7[/B]
 - Add alluc.com scraper
 - Fix movietv.to scraper
 - Improve host qualities list
