Add 1.0.0~beta10 of SALTS to Repo

--- a/plugin.video.salts/changelog.txt
+++ b/plugin.video.salts/changelog.txt
@@ -1,3 +1,6 @@
+[B]Version 1.0.0~beta10[/B]
+- Improvements to PIN Dialog
+
 [B]Version 1.0.0~beta9[/B]
 - Add trakt.tv PIN auth
 - Add auto-config option
