Add 2.5.65 of 1CH to Repo

--- a/plugin.video.1channel/changelog.txt
+++ b/plugin.video.1channel/changelog.txt
@@ -1,5 +1,9 @@
+[B]Version 2.5.65[/B]
+- Add notification on failed streams
+- Fix proxy captchas
+
 [B]Version 2.5.64[/B]
-Various bug fixes when metadata is off
+- Various bug fixes when metadata is off
 
 [B]Version 2.5.63[/B]
 - Add Firestorm Theme
