Add 1.0.6 of SALTS to Repo

--- a/plugin.video.salts/changelog.txt
+++ b/plugin.video.salts/changelog.txt
@@ -1,3 +1,6 @@
+[B]Version 1.0.6[/B]
+- Add new TVA UrlResolver Repo (TESTING!)
+
 [B]Version 1.0.5[/B]
 - Add better integration with script.trakt
 - Add xmovies8 scraper
