--- a/plugin.video.salts/resources/language/English/strings.po
+++ b/plugin.video.salts/resources/language/English/strings.po
@@ -782,6 +782,14 @@ msgctxt "#30191"
 msgid "Failed to write file"
 msgstr ""
 
+msgctxt "#30192"
+msgid "Reset All Scraper Base Urls to Default"
+msgstr ""
+
+msgctxt "#30193"
+msgid "Base Url Reset Complete"
+msgstr ""
+
 msgctxt "#30500"
 msgid "Addon Theme"
 msgstr ""
@@ -1035,7 +1043,7 @@ msgstr ""
 
 #. Keep 4 spaces at the beginning of string 
 msgctxt "#30562"
-msgid "    During StartUp?"
+msgid "     During StartUp?"
 msgstr ""
 
 #. Keep 4 spaces at the beginning of string 
@@ -1358,4 +1366,3 @@ msgstr ""
 msgctxt "#30639"
 msgid "On"
 msgstr ""
-
