Add 1.0.10 of SALTS to Repo

--- a/plugin.video.salts/changelog.txt
+++ b/plugin.video.salts/changelog.txt
@@ -1,3 +1,7 @@
+[B]Version 1.0.10[/B]
+- Improve mail.ru and videomega host qualities
+- Add shush scraper
+
 [B]Version 1.0.9[/B]
 - Add PlayboxHD scraper
 - Remove hdtvshows.net scraper
