--- a/plugin.video.salts/changelog.txt
+++ b/plugin.video.salts/changelog.txt
@@ -1,3 +1,6 @@
+[B]Version 1.0.11[/B]
+- Fix ssl error
+
 [B]Version 1.0.10[/B]
 - Improve mail.ru and videomega host qualities
 - Add shush scraper
