Add 1.0.15 of SALTS to Repo

--- a/plugin.video.salts/changelog.txt
+++ b/plugin.video.salts/changelog.txt
@@ -1,3 +1,10 @@
+[B]Version 1.0.15[/B]
+- Fix xmovies
+- Fix copy list script error
+- Fix sorting bug
+- Improve yify-streaming and playbox scrapers
+- update LosMovies base url
+
 [B]Version 1.0.14[/B]
 - Minor code improvements
 - cloudflare improvements
