--- a/plugin.video.salts/changelog.txt
+++ b/plugin.video.salts/changelog.txt
@@ -1,3 +1,7 @@
+[B]Version 1.0.17[/B]
+- Fix xmovies scraper
+- Fix movie25 scraper
+
 [B]Version 1.0.16[/B]
 - Add mvsnap scraper
 - Several scraper fixes
