Add 1.0.21 of SALTS to Repo

--- a/plugin.video.salts/changelog.txt
+++ b/plugin.video.salts/changelog.txt
@@ -1,3 +1,8 @@
+[B]Version 1.0.21[/B]
+- Fix input stream error on Isengard
+- Improve scrapers
+- Remove dependency on common.addon
+
 [B]Version 1.0.20[/B]
 - Show google videos as gvideo host
 - Improve several scrapers
