--- a/zips/plugin.video.1channel/changelog.txt
+++ b/zips/plugin.video.1channel/changelog.txt
@@ -1,3 +1,7 @@
+[B]Version 2.5.67[/B]
+- Fix library playback
+- Fix translated string
+
 [B]Version 2.5.66[/B]
 - Migrate addon to use po files
 - Move all strings to strings.po in preparation for translation
