--- a/plugin.video.salts/resources/language/English/strings.po
+++ b/plugin.video.salts/resources/language/English/strings.po
@@ -794,6 +794,10 @@ msgctxt "#30194"
 msgid "Requesting Url for: %s"
 msgstr ""
 
+msgctxt "#30195"
+msgid "'%s' added to library"
+msgstr ""
+
 msgctxt "#30500"
 msgid "Addon Theme"
 msgstr ""
