--- a/plugin.video.salts/resources/language/English/strings.po
+++ b/plugin.video.salts/resources/language/English/strings.po
@@ -798,6 +798,18 @@ msgctxt "#30195"
 msgid "'%s' added to library"
 msgstr ""
 
+msgctxt "#30196"
+msgid "Add to Section Menu"
+msgstr ""
+
+msgctxt "#30197"
+msgid "Remove from Section Menu"
+msgstr ""
+
+msgctxt "#30198"
+msgid "Liked Lists"
+msgstr ""
+
 msgctxt "#30500"
 msgid "Addon Theme"
 msgstr ""
@@ -1371,4 +1383,8 @@ msgstr ""
 
 msgctxt "#30639"
 msgid "On"
+msgstr ""
+
+msgctxt "#30640"
+msgid "Show Liked Lists"
 msgstr ""
