--- a/zips/plugin.video.salts/changelog.txt
+++ b/zips/plugin.video.salts/changelog.txt
@@ -1,3 +1,7 @@
+[B]Version 1.0.28[/B]
+- Merge GK decrypt and pyaes
+- fix timeout=0 bug for trakt.tv
+
 [B]Version 1.0.27[/B]
 - Handle TraktNotFound better
 - Add gvideo sources to tunemovie
