--- a/plugin.video.salts/changelog.txt
+++ b/plugin.video.salts/changelog.txt
@@ -1,3 +1,7 @@
+[B]Version 1.0.29[/B]
+- Fix trakt reauthorization
+- Improve trakt call reading
+
 [B]Version 1.0.28[/B]
 - Merge GK decrypt and pyaes
 - fix timeout=0 bug for trakt.tv
