Add 1.0.30 of SALTS to Repo

--- a/plugin.video.salts/changelog.txt
+++ b/plugin.video.salts/changelog.txt
@@ -1,3 +1,9 @@
+[B]Version 1.0.30[/B]
+- Fix pctf scraper
+- Fix movieshd scraper
+- Improve merdb scraper
+- Code improvements
+
 [B]Version 1.0.29[/B]
 - Fix trakt reauthorization
 - Improve trakt call reading
