Add 3.0.4~beta1 of script.trakt to Repo

--- a/script.trakt/resources/language/German/strings.po
+++ b/script.trakt/resources/language/German/strings.po
@@ -1,7 +1,7 @@
 # Kodi Media Center language file
 # Addon Name: Trakt
 # Addon id: script.trakt
-# Addon Provider: Trakt.tv
+# Addon Provider: Trakt.tv, Razze
 msgid ""
 msgstr ""
 "Project-Id-Version: XBMC Addons\n"
@@ -221,8 +221,8 @@ msgid "Sync collection on library update or cleaning"
 msgstr "Sammlung nach Bibliotheksaktualisierung oder -säuberung synchronisieren"
 
 msgctxt "#32056"
-msgid "Show notifications"
-msgstr "Benachrichtigungen anzeigen"
+msgid "Show sync notifications"
+msgstr "Sync-Benachrichtigungen anzeigen"
 
 msgctxt "#32057"
 msgid "Remove deleted movies from Trakt collection"
@@ -231,10 +231,6 @@ msgstr "Entferne gelöschte Filme aus der Trakt Sammlung"
 msgctxt "#32058"
 msgid "Remove deleted TV episodes from Trakt collection"
 msgstr "Entferne gelöschte Episoden aus der Trakt Sammlung"
-
-msgctxt "#32059"
-msgid "Show marked as watched notification"
-msgstr "Zeige \"als gesehen markiert\" Benachrichtigung"
 
 msgctxt "#32060"
 msgid "Hide notifications during playback"
@@ -541,36 +537,40 @@ msgid "Remove from Watchlist"
 msgstr "Von der Beobachtungsliste entfernen"
 
 msgctxt "#32136"
-msgid "Add to Watchlist"
+msgid "Add to watchlist"
 msgstr "Zur Beobachtungsliste hinzufügen"
 
 msgctxt "#32137"
-msgid "Rate this Movie"
+msgid "Rate this movie"
 msgstr "Diesen Film bewerten"
 
 msgctxt "#32138"
-msgid "Rate this Show"
+msgid "Rate this show"
 msgstr "Diese Serie bewerten"
 
 msgctxt "#32139"
-msgid "Rate this Episode"
+msgid "Rate this episode"
 msgstr "Diese Folge bewerten"
 
 msgctxt "#32140"
-msgid "Toggle Watched"
+msgid "Toggle watched"
 msgstr "Gesehene umschalten"
 
 msgctxt "#32141"
-msgid "Manage All Lists"
+msgid "Manage all lists"
 msgstr "Alle Listen verwalten"
 
 msgctxt "#32142"
-msgid "Update All Tags"
+msgid "Update all tags"
 msgstr "Alle Schlagwörter aktualisieren"
 
 msgctxt "#32143"
-msgid "Synchronize Library"
+msgid "Synchronize library"
 msgstr "Bibliothek synchronisieren"
+
+msgctxt "#32144"
+msgid "How do I authorize the trakt addon to access my trakt.tv account?"
+msgstr "Wie gestatte ich dem Trakt-Addon auf mein Trakt.tv-Konto zuzugreifen?"
 
 msgctxt "#32147"
 msgid "Trakt.tv PIN Authorization Failed"
@@ -583,6 +583,10 @@ msgstr "Diese Staffel bewerten"
 msgctxt "#32150"
 msgid "You will be reminded in 24 hours"
 msgstr "Sie werden in 24 Stunden erinnert"
+
+msgctxt "#32151"
+msgid "Use Addon Settings later if you change your mind"
+msgstr "Verwenden Sie die Addon-Einstellungen, wenn Sie Ihre Meinung ändern"
 
 msgctxt "#32152"
 msgid "Trakt Authorization Complete"
@@ -608,6 +612,34 @@ msgctxt "#32157"
 msgid "Account Authorization"
 msgstr "Kontoautorisierung"
 
+msgctxt "#32159"
+msgid "Visit {0} or scan the QR Code below."
+msgstr "Rufen Sie {0} auf oder scannen Sie den QR-Code unten."
+
+msgctxt "#32160"
+msgid "Authorize the trakt addon to access your account."
+msgstr "Gestatten Sie dem Trakt-Addon Zugriff auf Ihr Konto."
+
+msgctxt "#32161"
+msgid "Enter the PIN provided in the box below."
+msgstr "Geben Sie die PIN in den Kasten unten ein."
+
+msgctxt "#32162"
+msgid "The trakt addon CAN NOT be used without authorizing it to access your trakt.tv account."
+msgstr "Das Trakt-Addon KANN NICHT verwenden werden ohne das Sie ihm Zugriff auf Ihr Trakt.tv-Konto geben."
+
 msgctxt "#32163"
 msgid "User"
 msgstr "Benutzer"
+
+msgctxt "#32164"
+msgid "Fallback to Title/Year matching if necessary"
+msgstr "Auf Titel-/Jahr-Abgleich zurückgreifen, wenn notwendig"
+
+msgctxt "#32165"
+msgid "Trakt - Added to watchlist"
+msgstr "Trakt - Zur Beobachtungsliste hinzugefügt"
+
+msgctxt "#32166"
+msgid "Trakt - Failed adding to watchlist"
+msgstr "Trakt - Beim Hinzufügen zur Beobachtungsliste gescheitert"
