--- a/script.trakt/changelog.txt
+++ b/script.trakt/changelog.txt
@@ -1,10 +1,24 @@
+version 3.0.4
+  - added playback progress sync for episodes
+  - fixed problem when external addon is providing video_ids but no year
+  - updated language files from Transifex
+
+version 3.0.3
+  - bugfix for keyboard not showing up when trying to type in the pin dialog
+  - properly handle any ids combination when scrobbling is off for ratings
+  - updated language files from Transifex
+
 version 3.0.2
-  - fancy PIN auth dialog (by tknorris)
+  - fancy PIN auth dialog (by tknorris) and design (by piers)
+  - new design for context menu (by piers)
+  - skinners be aware, we renamed the dialogs, so you will need to rename yours too
+  - improved the dialogs so they are easier to skin
   - you no longer need to scrobble to get a rating dialog
-  - created context menu addons for Kodi 15 (Isengard)
+  - created context menu addons for Kodi 15 (Isengard) - you need to install them on their own
+  - added an 'add to watchlist' button
   - various fixes for manual rating and watched
   - fixed some notifications not causing errors
-  - Added id scrobbling via ids window property
+  - added id scrobbling via ids window property
   - updated language files from Transifex
 
 version 3.0.1
