--- a/script.trakt/resources/language/Dutch/strings.po
+++ b/script.trakt/resources/language/Dutch/strings.po
@@ -1,7 +1,7 @@
 # Kodi Media Center language file
 # Addon Name: Trakt
 # Addon id: script.trakt
-# Addon Provider: Trakt.tv
+# Addon Provider: Trakt.tv, Razze
 msgid ""
 msgstr ""
 "Project-Id-Version: XBMC Addons\n"
@@ -114,7 +114,7 @@ msgstr "Rampzalig"
 
 msgctxt "#32029"
 msgid "Terrible"
-msgstr "Verschrikkelijk"
+msgstr "Vreselijk"
 
 msgctxt "#32030"
 msgid "Bad"
@@ -130,7 +130,7 @@ msgstr "Bah"
 
 msgctxt "#32033"
 msgid "Fair"
-msgstr "Mooi"
+msgstr "Redelijk"
 
 msgctxt "#32034"
 msgid "Good"
@@ -221,8 +221,8 @@ msgid "Sync collection on library update or cleaning"
 msgstr "Synchroniseer je collectie tijdens het bijwerken of opschonen van je bibliotheek"
 
 msgctxt "#32056"
-msgid "Show notifications"
-msgstr "Berichten weergeven"
+msgid "Show sync notifications"
+msgstr "Toon sync notificaties"
 
 msgctxt "#32057"
 msgid "Remove deleted movies from Trakt collection"
@@ -231,10 +231,6 @@ msgstr "Haal verwijderde films uit je Trakt-collectie"
 msgctxt "#32058"
 msgid "Remove deleted TV episodes from Trakt collection"
 msgstr "Haal verwijderde TV-afleveringen uit je Trakt-collectie"
-
-msgctxt "#32059"
-msgid "Show marked as watched notification"
-msgstr "Toon gemarkeerd als bekeken bericht"
 
 msgctxt "#32060"
 msgid "Hide notifications during playback"
@@ -541,37 +537,109 @@ msgid "Remove from Watchlist"
 msgstr "Verwijder van bekijklijst"
 
 msgctxt "#32136"
-msgid "Add to Watchlist"
-msgstr "Voeg toe aan bekijklijst"
+msgid "Add to watchlist"
+msgstr "Voeg toe aan bekekenlijst"
 
 msgctxt "#32137"
-msgid "Rate this Movie"
+msgid "Rate this movie"
 msgstr "Waardeer deze film"
 
 msgctxt "#32138"
-msgid "Rate this Show"
+msgid "Rate this show"
 msgstr "Waardeer deze serie"
 
 msgctxt "#32139"
-msgid "Rate this Episode"
+msgid "Rate this episode"
 msgstr "Waardeer deze aflevering"
 
 msgctxt "#32140"
-msgid "Toggle Watched"
+msgid "Toggle watched"
 msgstr "Toggle bekeken"
 
 msgctxt "#32141"
-msgid "Manage All Lists"
+msgid "Manage all lists"
 msgstr "Beheer alle lijsten"
 
 msgctxt "#32142"
-msgid "Update All Tags"
-msgstr "Update alle Tags"
+msgid "Update all tags"
+msgstr "Update alle tags"
 
 msgctxt "#32143"
-msgid "Synchronize Library"
+msgid "Synchronize library"
 msgstr "Synchroniseer bibliotheek"
+
+msgctxt "#32144"
+msgid "How do I authorize the trakt addon to access my trakt.tv account?"
+msgstr "Hoe autoriseer ik de trakt add-on om in mijn trakt.tv account te komen?"
+
+msgctxt "#32147"
+msgid "Trakt.tv PIN Authorization Failed"
+msgstr "Trakt.tv Wachtwoord autorisatie mislukt"
+
+msgctxt "#32149"
+msgid "Rate this Season"
+msgstr "Waardeer dit seizoen"
+
+msgctxt "#32150"
+msgid "You will be reminded in 24 hours"
+msgstr "U wordt herinnert binnen 24 uur"
+
+msgctxt "#32151"
+msgid "Use Addon Settings later if you change your mind"
+msgstr "Gebruik add-on instellingen later al je van gedachten wisselt"
+
+msgctxt "#32152"
+msgid "Trakt Authorization Complete"
+msgstr "Trakt autorisatie compleet"
+
+msgctxt "#32153"
+msgid "Trakt Account Authorization"
+msgstr "Trakt Account autorisatie"
+
+msgctxt "#32154"
+msgid "Authorize"
+msgstr "Autoriseren"
+
+msgctxt "#32155"
+msgid "Remind Me Later"
+msgstr "Herinner me later"
+
+msgctxt "#32156"
+msgid "No Thanks"
+msgstr "Nee bedankt"
+
+msgctxt "#32157"
+msgid "Account Authorization"
+msgstr "Account autorisatie"
+
+msgctxt "#32159"
+msgid "Visit {0} or scan the QR Code below."
+msgstr "Bezoek {0} of scan de QR code beneden."
+
+msgctxt "#32160"
+msgid "Authorize the trakt addon to access your account."
+msgstr "Autoriseer de trakt add-on om toegang te krijgen tot jouw account."
+
+msgctxt "#32161"
+msgid "Enter the PIN provided in the box below."
+msgstr "Vul het wachtwoord in verkregen in de box beneden."
+
+msgctxt "#32162"
+msgid "The trakt addon CAN NOT be used without authorizing it to access your trakt.tv account."
+msgstr "De trakt add-on KAN NIET worden gebruikt zonder het te autoriseren naar jouw trakt.tv account.   "
 
 msgctxt "#32163"
 msgid "User"
 msgstr "Gebruiker"
+
+msgctxt "#32164"
+msgid "Fallback to Title/Year matching if necessary"
+msgstr "Terugvallen naar Titel/Jaar overeenkoming indien noodzakelijk"
+
+msgctxt "#32165"
+msgid "Trakt - Added to watchlist"
+msgstr "Trakt - Toegevoegd aan bekijklijst"
+
+msgctxt "#32166"
+msgid "Trakt - Failed adding to watchlist"
+msgstr "Trakt - Niet gelukt toe te voegen aan bekijklijst"
