--- a/script.trakt/resources/language/English (US)/strings.po
+++ b/script.trakt/resources/language/English (US)/strings.po
@@ -1,7 +1,7 @@
 # Kodi Media Center language file
 # Addon Name: Trakt
 # Addon id: script.trakt
-# Addon Provider: Trakt.tv
+# Addon Provider: Trakt.tv, Razze
 msgid ""
 msgstr ""
 "Project-Id-Version: XBMC Addons\n"
@@ -221,8 +221,8 @@ msgid "Sync collection on library update or cleaning"
 msgstr "Sync collection on library update or cleaning"
 
 msgctxt "#32056"
-msgid "Show notifications"
-msgstr "Show notifications"
+msgid "Show sync notifications"
+msgstr "Show sync notifications"
 
 msgctxt "#32057"
 msgid "Remove deleted movies from Trakt collection"
@@ -231,10 +231,6 @@ msgstr "Remove deleted movies from Trakt collection"
 msgctxt "#32058"
 msgid "Remove deleted TV episodes from Trakt collection"
 msgstr "Remove deleted TV episodes from Trakt collection"
-
-msgctxt "#32059"
-msgid "Show marked as watched notification"
-msgstr "Show marked as watched notification"
 
 msgctxt "#32060"
 msgid "Hide notifications during playback"
@@ -541,36 +537,36 @@ msgid "Remove from Watchlist"
 msgstr "Remove from Watchlist"
 
 msgctxt "#32136"
-msgid "Add to Watchlist"
-msgstr "Add to Watchlist"
+msgid "Add to watchlist"
+msgstr "Add to watchlist"
 
 msgctxt "#32137"
-msgid "Rate this Movie"
-msgstr "Rate this Movie"
+msgid "Rate this movie"
+msgstr "Rate this movie"
 
 msgctxt "#32138"
-msgid "Rate this Show"
-msgstr "Rate this Show"
+msgid "Rate this show"
+msgstr "Rate this show"
 
 msgctxt "#32139"
-msgid "Rate this Episode"
-msgstr "Rate this Episode"
+msgid "Rate this episode"
+msgstr "Rate this episode"
 
 msgctxt "#32140"
-msgid "Toggle Watched"
-msgstr "Toggle Watched"
+msgid "Toggle watched"
+msgstr "Toggle watched"
 
 msgctxt "#32141"
-msgid "Manage All Lists"
-msgstr "Manage All Lists"
+msgid "Manage all lists"
+msgstr "Manage all lists"
 
 msgctxt "#32142"
-msgid "Update All Tags"
-msgstr "Update All Tags"
+msgid "Update all tags"
+msgstr "Update all tags"
 
 msgctxt "#32143"
-msgid "Synchronize Library"
-msgstr "Synchronize Library"
+msgid "Synchronize library"
+msgstr "Synchronize library"
 
 msgctxt "#32144"
 msgid "How do I authorize the trakt addon to access my trakt.tv account?"
@@ -616,9 +612,9 @@ msgctxt "#32157"
 msgid "Account Authorization"
 msgstr "Account Authorization"
 
-msgctxt "#32158"
-msgid "To authorize the trakt addon to access your trakt.tv account:"
-msgstr "To authorize the trakt addon to access your trakt.tv account:"
+msgctxt "#32159"
+msgid "Visit {0} or scan the QR Code below."
+msgstr "Visit {0} or scan the QR Code below."
 
 msgctxt "#32160"
 msgid "Authorize the trakt addon to access your account."
@@ -639,3 +635,11 @@ msgstr "User"
 msgctxt "#32164"
 msgid "Fallback to Title/Year matching if necessary"
 msgstr "Fallback to Title/Year matching if necessary"
+
+msgctxt "#32165"
+msgid "Trakt - Added to watchlist"
+msgstr "Trakt - Added to watchlist"
+
+msgctxt "#32166"
+msgid "Trakt - Failed adding to watchlist"
+msgstr "Trakt - Failed adding to watchlist"
