--- a/script.trakt/resources/language/Korean/strings.po
+++ b/script.trakt/resources/language/Korean/strings.po
@@ -1,7 +1,7 @@
 # Kodi Media Center language file
 # Addon Name: Trakt
 # Addon id: script.trakt
-# Addon Provider: Trakt.tv
+# Addon Provider: Trakt.tv, Razze
 msgid ""
 msgstr ""
 "Project-Id-Version: XBMC Addons\n"
@@ -221,8 +221,8 @@ msgid "Sync collection on library update or cleaning"
 msgstr "라이브러리를 업데이트하거나 정리할 때 컬렉션 동기화"
 
 msgctxt "#32056"
-msgid "Show notifications"
-msgstr "알림 보기"
+msgid "Show sync notifications"
+msgstr "동기화 알림 보기"
 
 msgctxt "#32057"
 msgid "Remove deleted movies from Trakt collection"
@@ -231,10 +231,6 @@ msgstr "삭제한 영화를 Trakt 컬렉션에서 지우기"
 msgctxt "#32058"
 msgid "Remove deleted TV episodes from Trakt collection"
 msgstr "삭제한 TV 에피소드를 Trakt 컬렉션에서 지우기"
-
-msgctxt "#32059"
-msgid "Show marked as watched notification"
-msgstr "시청함으로 표시 알림 보기"
 
 msgctxt "#32060"
 msgid "Hide notifications during playback"
@@ -541,35 +537,35 @@ msgid "Remove from Watchlist"
 msgstr "Watchlist에서 제거"
 
 msgctxt "#32136"
-msgid "Add to Watchlist"
-msgstr "Watchlist에 추가"
+msgid "Add to watchlist"
+msgstr "watchlist에 추가"
 
 msgctxt "#32137"
-msgid "Rate this Movie"
+msgid "Rate this movie"
 msgstr "이 영화 평가"
 
 msgctxt "#32138"
-msgid "Rate this Show"
+msgid "Rate this show"
 msgstr "이 TV 쇼 평가"
 
 msgctxt "#32139"
-msgid "Rate this Episode"
+msgid "Rate this episode"
 msgstr "이 에피소드 평가"
 
 msgctxt "#32140"
-msgid "Toggle Watched"
+msgid "Toggle watched"
 msgstr "시청/미시청 전환"
 
 msgctxt "#32141"
-msgid "Manage All Lists"
+msgid "Manage all lists"
 msgstr "모든 목록 관리"
 
 msgctxt "#32142"
-msgid "Update All Tags"
+msgid "Update all tags"
 msgstr "모든 태그 업데이트"
 
 msgctxt "#32143"
-msgid "Synchronize Library"
+msgid "Synchronize library"
 msgstr "라이브러리 동기화"
 
 msgctxt "#32144"
@@ -612,9 +608,9 @@ msgctxt "#32157"
 msgid "Account Authorization"
 msgstr "계정 인증"
 
-msgctxt "#32158"
-msgid "To authorize the trakt addon to access your trakt.tv account:"
-msgstr "trakt 애드온의 trakt.tv 계정 접속을 인증하려면:"
+msgctxt "#32159"
+msgid "Visit {0} or scan the QR Code below."
+msgstr "{0} 을 방문하거나 아래의 QR 코드를 스캔하세요."
 
 msgctxt "#32160"
 msgid "Authorize the trakt addon to access your account."
@@ -631,3 +627,11 @@ msgstr "trakt 애드은 trakt.tv 계정에 접속할 수 있는 인증없이 사
 msgctxt "#32163"
 msgid "User"
 msgstr "사용자"
+
+msgctxt "#32165"
+msgid "Trakt - Added to watchlist"
+msgstr "Trakt - watchlist에 추가됨"
+
+msgctxt "#32166"
+msgid "Trakt - Failed adding to watchlist"
+msgstr "Trakt - watchlist에 추가 실패"
