--- a/script.trakt/resources/language/Polish/strings.po
+++ b/script.trakt/resources/language/Polish/strings.po
@@ -1,7 +1,7 @@
 # Kodi Media Center language file
 # Addon Name: Trakt
 # Addon id: script.trakt
-# Addon Provider: Trakt.tv
+# Addon Provider: Trakt.tv, Razze
 msgid ""
 msgstr ""
 "Project-Id-Version: XBMC Addons\n"
@@ -221,8 +221,8 @@ msgid "Sync collection on library update or cleaning"
 msgstr "Synchronizuj kolekcję po aktualizacji lub czyszczeniu biblioteki"
 
 msgctxt "#32056"
-msgid "Show notifications"
-msgstr "Pokazuj powiadomienia"
+msgid "Show sync notifications"
+msgstr "Pokazuj powiadomienia o synchronizacji"
 
 msgctxt "#32057"
 msgid "Remove deleted movies from Trakt collection"
@@ -231,10 +231,6 @@ msgstr "Usuwaj skasowane filmy z kolekcji Trakt"
 msgctxt "#32058"
 msgid "Remove deleted TV episodes from Trakt collection"
 msgstr "Usuwaj skasowane odcinki z kolekcji Trakt"
-
-msgctxt "#32059"
-msgid "Show marked as watched notification"
-msgstr "Pokazuj powiadomienia o oznaczeniu jako obejrzane"
 
 msgctxt "#32060"
 msgid "Hide notifications during playback"
@@ -541,35 +537,35 @@ msgid "Remove from Watchlist"
 msgstr "Usuń z listy Do obejrzenia"
 
 msgctxt "#32136"
-msgid "Add to Watchlist"
+msgid "Add to watchlist"
 msgstr "Dodaj do listy Do obejrzenia"
 
 msgctxt "#32137"
-msgid "Rate this Movie"
+msgid "Rate this movie"
 msgstr "Oceń ten film"
 
 msgctxt "#32138"
-msgid "Rate this Show"
+msgid "Rate this show"
 msgstr "Oceń ten serial"
 
 msgctxt "#32139"
-msgid "Rate this Episode"
+msgid "Rate this episode"
 msgstr "Oceń ten odcinek"
 
 msgctxt "#32140"
-msgid "Toggle Watched"
+msgid "Toggle watched"
 msgstr "Przełącz stan obejrzenia"
 
 msgctxt "#32141"
-msgid "Manage All Lists"
-msgstr "Zarządzaj wszystkimi listami"
+msgid "Manage all lists"
+msgstr "Zarządzaj listami"
 
 msgctxt "#32142"
-msgid "Update All Tags"
-msgstr "Aktualizuj wszystkie znaczniki"
+msgid "Update all tags"
+msgstr "Aktualizuj znaczniki"
 
 msgctxt "#32143"
-msgid "Synchronize Library"
+msgid "Synchronize library"
 msgstr "Synchronizuj bibliotekę"
 
 msgctxt "#32144"
@@ -616,9 +612,9 @@ msgctxt "#32157"
 msgid "Account Authorization"
 msgstr "Autoryzacja konta"
 
-msgctxt "#32158"
-msgid "To authorize the trakt addon to access your trakt.tv account:"
-msgstr "Aby wykonać autoryzację dostępu dodatki do Twojego konta Trakt.tv"
+msgctxt "#32159"
+msgid "Visit {0} or scan the QR Code below."
+msgstr "Odwiedź {0} lub zeskanuj kod QR poniżej."
 
 msgctxt "#32160"
 msgid "Authorize the trakt addon to access your account."
@@ -639,3 +635,11 @@ msgstr "Użytkownik"
 msgctxt "#32164"
 msgid "Fallback to Title/Year matching if necessary"
 msgstr "Używaj awaryjnie dopasowania Tytuł/Rok"
+
+msgctxt "#32165"
+msgid "Trakt - Added to watchlist"
+msgstr "Trakt - Dodano do listy Do obejrzenia"
+
+msgctxt "#32166"
+msgid "Trakt - Failed adding to watchlist"
+msgstr "Trakt - Nieudane dodawanie do listy Do obejrzenia"
