--- a/script.trakt/resources/language/Portuguese/strings.po
+++ b/script.trakt/resources/language/Portuguese/strings.po
@@ -1,7 +1,7 @@
 # Kodi Media Center language file
 # Addon Name: Trakt
 # Addon id: script.trakt
-# Addon Provider: Trakt.tv
+# Addon Provider: Trakt.tv, Razze
 msgid ""
 msgstr ""
 "Project-Id-Version: XBMC Addons\n"
@@ -221,8 +221,8 @@ msgid "Sync collection on library update or cleaning"
 msgstr "Sincronizar colecção ao actualizar ou limpar a biblioteca"
 
 msgctxt "#32056"
-msgid "Show notifications"
-msgstr "Mostrar notificações"
+msgid "Show sync notifications"
+msgstr "Mostrar notificações de sincronismo"
 
 msgctxt "#32057"
 msgid "Remove deleted movies from Trakt collection"
@@ -231,10 +231,6 @@ msgstr "Remover filmes apagados da colecção do Trakt"
 msgctxt "#32058"
 msgid "Remove deleted TV episodes from Trakt collection"
 msgstr "Remover episódios apagados da colecção do Trakt"
-
-msgctxt "#32059"
-msgid "Show marked as watched notification"
-msgstr "Mostrar notificação para marcado como visto"
 
 msgctxt "#32060"
 msgid "Hide notifications during playback"
@@ -541,37 +537,65 @@ msgid "Remove from Watchlist"
 msgstr "Remover da Watchlist"
 
 msgctxt "#32136"
-msgid "Add to Watchlist"
-msgstr "Adicionar à Watchlist"
+msgid "Add to watchlist"
+msgstr "Adicionar à Lista de Reprodução"
 
 msgctxt "#32137"
-msgid "Rate this Movie"
-msgstr "Classifica este Filme"
+msgid "Rate this movie"
+msgstr "Classifique este Filme"
 
 msgctxt "#32138"
-msgid "Rate this Show"
-msgstr "Classifica esta Série"
+msgid "Rate this show"
+msgstr "Classifique esta Série"
 
 msgctxt "#32139"
-msgid "Rate this Episode"
-msgstr "Classifica este Episódio"
+msgid "Rate this episode"
+msgstr "Classifique este Episódio"
 
 msgctxt "#32140"
-msgid "Toggle Watched"
+msgid "Toggle watched"
 msgstr "Alternar visto/por ver"
 
 msgctxt "#32141"
-msgid "Manage All Lists"
+msgid "Manage all lists"
 msgstr "Gerir Todas as Listas"
 
 msgctxt "#32142"
-msgid "Update All Tags"
-msgstr "Actualizar Todas as Tags"
+msgid "Update all tags"
+msgstr "Actualizar Todas as Etiquetas"
 
 msgctxt "#32143"
-msgid "Synchronize Library"
+msgid "Synchronize library"
 msgstr "Sincronizar Biblioteca"
+
+msgctxt "#32154"
+msgid "Authorize"
+msgstr "Autorizar"
+
+msgctxt "#32155"
+msgid "Remind Me Later"
+msgstr "Lembrar Mais Tarde"
+
+msgctxt "#32156"
+msgid "No Thanks"
+msgstr "Não Obrigado"
+
+msgctxt "#32157"
+msgid "Account Authorization"
+msgstr "Autorização de Conta"
+
+msgctxt "#32159"
+msgid "Visit {0} or scan the QR Code below."
+msgstr "Visitar {0} ou digitalizar código QR abaixo."
 
 msgctxt "#32163"
 msgid "User"
 msgstr "Utilizador"
+
+msgctxt "#32165"
+msgid "Trakt - Added to watchlist"
+msgstr "Trakt - Adicionado à Watchlist"
+
+msgctxt "#32166"
+msgid "Trakt - Failed adding to watchlist"
+msgstr "Trakt - Falhou a Adicionar à Watchlist"
