--- a/zips/plugin.video.salts/changelog.txt
+++ b/zips/plugin.video.salts/changelog.txt
@@ -1,3 +1,7 @@
+[B]Version 1.0.31[/B]
+- Add Movie & TV Shows Mosts
+- Add watch8now scraper
+
 [B]Version 1.0.30[/B]
 - Fix pctf scraper
 - Fix movieshd scraper
