--- a/plugin.video.salts/resources/language/English/strings.po
+++ b/plugin.video.salts/resources/language/English/strings.po
@@ -855,7 +855,7 @@ msgid "Addon Theme"
 msgstr ""
 
 msgctxt "#30501"
-msgid "Parallel Mode"
+msgid "Authorized Trakt User"
 msgstr ""
 
 msgctxt "#30502"
@@ -1056,7 +1056,9 @@ msgctxt "#30550"
 msgid "Trakt Page Size"
 msgstr ""
 
-# 30551 removed
+msgctxt "#30551"
+msgid "Pre-Test All Direct Sources"
+msgstr ""
 
 msgctxt "#30552"
 msgid "Use Trakt Bookmarks"
