Add 1.0.40 of SALTS to Repo

--- a/plugin.video.salts/changelog.txt
+++ b/plugin.video.salts/changelog.txt
@@ -1,3 +1,10 @@
+[B]Version 1.0.40[/B]
+- Add megabox scraper
+- Fix gvcenter scraper
+- Fix hdmz scraper
+- Fix ororo.tv scraper
+- Icefilms Ad fixes
+
 [B]Version 1.0.39[/B]
 - Fix gvideo parsing
 - Show icefilms ads when playing icefilms sources
