Add 1.0.42 of SALTS to Repo

--- a/plugin.video.salts/changelog.txt
+++ b/plugin.video.salts/changelog.txt
@@ -1,3 +1,11 @@
+[B]Version 1.0.42[/B]
+- Fix gvcenter scraper
+- Update wso scraper
+- update viooz scraper
+ - Add de-dup "add to library" option
+ - Move source sort order back to settings.xml
+ - Fix megabox scraper
+ 
 [B]Version 1.0.41[/B]
 - Add megabox scraper
 - Fix gvcenter scraper
